2006-10-28  rgareus  <robin@gareus.org>
 - made -V a little more verbose. and -q a little more quiet :D

2006-10-28  rgareus  <robin@gareus.org>
 - changed audioframe -> videoframe conversion back to floor() 
 - updated framerate detection.
 - re-indented seek code. and changed -K, -k behaviour (no continuous seeks)
 - fixed ffmpeg packet allocation 
 - XV-videomode only:
   - added always on top feature. ( '-a' ; press 'a' on widow ; no remote command for that yet)
   - added support to hide [mouse] cursor  (press 'm' )

2006-08-27  rgareus  <robin@gareus.org>
 - added simple Extended Window Manager Hints(EWMH) fullscreen support for XV videomode.

2006-08-12  rgareus  <robin@gareus.org>
 - av_q2d - fix to compile with older 
 ffmpeg before LIBAVCODEC_BUILD 4753

2006-06-25  rgareus  <robin@gareus.org>
 - updated debian-marillat to debian-multimedia in doc

2006-06-16  rgareus  <robin@gareus.org>
 - updated contrib README and encode.sh

2006-06-13  rgareus  <robin@gareus.org>
 - added jadio to contrib folder.

2006-06-12  rgareus  <robin@gareus.org>
 - smpte support for non-integer fps 
 - '-F <float>' allow to override fps info of file
 - '-K' -> 'old' seek to any frame mode
 - messed up avseek - added support for multi-packet frames.
   urgent TODO: remove all the nasty goto's from the initial example code :-X
   now that seeking is 'known to work' rewrite the whole darn thing and fix
   the dts/pts issues.
   This release is better than the version from June 06 as it fixes a
   possible endless (until EOF) frame seek issue...

2006-06-06  rgareus  <robin@gareus.org>
 - when seeking to non key frames, 
   the video can be decoded starting from the prev keyframe.
 - removed LIBAVCODEC < 4622 backwards seek compat.
 - new valid seekmodes (remote ctrl) are 'key', 'any' and 'continuous' (default).
 - OSD Frame is now the displayed frame, while the SMPTE still corresponds to jack time.  
 - XV,SDL (YUV): added support for video image strides other than XV pitches. 